# investment-portfolio

./: .gitignore  .pre-commit-config.yaml  README.md  config.yaml  pyproject.toml  tox.ini
investment_portfolio/: __init__.py  main.py  schema.py
notebooks/: testing.ipynb  testing.py
tests/: test_investment_portfolio.py
