[tool.poetry]
name = "investment_portfolio"
version = "0.1.0"
description = ""
authors = ["Griffin Knipe <knipegp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.13"
pyportfolioopt = "^1.5.1"
yfinance = "^0.2.0"
requests-cache = "^1.0.0"
scikit-learn = "^1.0.2"
loguru = "^0.7.2"
jupyterlab = "^4.0.7"
jupytext = "^1.15.2"
seaborn = "^0.13.0"
requests-ratelimiter = "^0.4.2"

[tool.poetry.group.dev.dependencies]
pylint = "^3.0.1"
pytest = "^7.0"
black = "^23.10.0"
mypy = "^1.6.1"
tox = "^4.11.3"
pip-audit = "^2.6.1"
pre-commit = "^3.5.0"
pandas-stubs = "^2.1.1.230928"
types-pyyaml = "^6.0.12.12"
types-requests = "^2.31.0.10"
reorder-python-imports = "^3.12.0"
bandit = "^1.7.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
